<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IKEA Product Help</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
<string name="help">
    This is step by step instruction manual for new users. This manual will guide you through actions you need to take to use application.\n

\n1.	On first screen, you will notice applications basic user interface.
\n2.	You can choose operations you want to perform on your product like Install, Assemble, Repair, and Operate.
\n3.	You can enter operation by typing operation’s name in provided area at top of your screen.
\n4.	Then press GO button provided, your requested operations form will be presented to you.
\n5.	When you speak any of the key word listed like install, operate, assemble, repair using speak button, then appropriate operation form will be presented to you.
\n6.	Otherwise you can directly click on operation button and information about that operation will be presented to you.
\n7.	Once you select one of the operation, then on second user interface screen you get actual information about that operation.
\n8.	You can scroll down through each step.  You can also press read button, so that application reads instructions step by step.
\n9.	You can stop reading instructions at any point you want to.
\n10.	When you are finished with steps provided, you can go back using back button and choose next operation.
\n11.	If you are done with using application, then you can exit application by pressing back button again.
    </string>        
        
    <!-- Install page text -->
     <string name="prepare">Step 1 : Prepare the kitchen space for the dishwasher.\n
        Most standard built-in dishwashers need at least a 24-inch (60 cm) wide opening. If necessary, you can adjust your cupboard to the height of the dishwasher by removing the cupboard top, or adding an overhang to cover a gap between the top of the dishwasher and the countertop.
If you are installing a dishwasher for the first time in a space, drill holes through the cabinet for the dishwasher\'s electric wires, water inlets and drain tube.</string>
    <string name="connect">Step 2 : Connect the water supply under the sink and to the line of dishwasher.\n
        Turn the water supply off and disconnect the sink\'s hot water supply inlet. Connect a dual outlet valve to the hot water inlet under the sink. Reattach the sink hot water outlet to one side, and attach the dishwasher water supply line to the other outlet.
This step will vary depending on the type of dishwasher you are installing. Some newer dishwasher models require that your water and electrical wiring connect to a panel under the front of the unit. However, many models have water, electric and drain connections in the back of the dishwasher. </string>
    <string name="wires">Step 3 : Connect the electrical wires to the dishwashing unit.\n
        Turn the power off at the main breaker before starting.
Run the electrical wires into the back of the dishwasher\'s electrical box.
Attach the black (hot) wire to the black wires coming out of the dishwasher using an electrical wire nut.</string>
    <string name="secure">Step 4 : Secure the dishwasher to the cabinet.\n
        Push the under-the-counter dishwasher into its spot, being careful not to crimp any wiring or water tubes located under the unit.
Check to make sure the unit sits level. If it is not, adjust the leveling feet by screwing them in or out.
Mount the front of the dishwasher on the unit with the hardware provided with the product.</string>
    

    <!-- Repair page text -->
    <string name="repair_notclean">Step 1 : If your dishes don’t come out clean.\n
Check for following actions Are you overloading your dishwasher? Check the manufacturer\'s instructions to make sure you\'re loading it right .Does silverware drop below the lower basket? The spray arm can\'t spin if obstructed. Are you using the proper dishwasher detergent? Do you routinely scrape food bits off dishes before loading them into the racks? (Rinsing is not necessary.) Are you using a special rinsing agent if your water is hard (highly mineralized)? Hard water can leave a film on the dishes. You can simply Remove the spray arm to clean it. Unscrew the cap, turning it clockwise, and lift off the arm.
</string>
    <string name="repair_leaks">Step 2 : Water pools on the floor—door leaks.\n
Check the gasket for cracks, wear and caked-on crud. If it\'s damaged, replace it. If it\'s dirty, clean it with mild detergent and a brush and sponge. A poorly sealing door causes most leaks, and this section concentrates on solutions for this problem. Check for a bad seal when washing the next load of dishes by looking for drips directly under the door. If you find moisture, go to the next step. If you don\'t find any and a puddle appears, unscrew the lower front panels and look for drips around hoses and other parts. Sometimes you can tighten a hose connection, but most repairs for these types of leaks are difficult.
</string>
    <string name="repair_notstart">Step 3 : If dishwasher doesn\’t start.\n
All dishwashers should have a nearby shutoff, either a switch above the sink or a cord you can unplug under the sink. If the switch is off, turn it back on. Or plug the machine back in. If it doesn\'t start, check the circuit breaker or fuse at the main electrical panel to make sure it hasn\'t tripped. The dishwasher should have its own circuit. Sometimes the motor sticks and won\'t turn, especially if you haven\'t used the dishwasher for a while. One sign of this problem is a humming sound without any other action. To get things going again, remove the lower panels and reach under and spin the motor by turning its fan blades by hand.
</string>

    <!-- Assemble page text -->
    <string name="assemble_panel">Step 1 : Panel  Installation.\n
The extension pieces are used to match the control panel height  to the horizontal drawer line of the cabinets, and must be installed as shown in on the template sheet. The standard piece is used for drawer heights up to 6 (152mm); the long piece is used for drawer heights greater than 6” (152mm) but 6-7/16 (164mm) or less.
</string>
    <string name="assemble_door">Step 2 : Door Installation.\n
Generally models come with additional mounting hardware and a template sheet that will show you how to mount the panel. One side of the template shows how to mount a one piece panel; the other side shows how to mount a two piece panel. Decide which type of assembling  you want before proceeding with the installation.</string>
    <string name="assemble_securing">Step 3 : Securing Dishwasher.\n
Drive the mounting screws through the holes in the mounting brackets as shown in figure for Top or Side Mount. After the unit is installed in the enclosure, leveled and secured, lock the two front leg levelers in place by driving the enclosed leg leveler locking screws into each screw boss located in front of the levelers.  Tighten screws until they are flush with the surface of the bosses.
</string>
    <string name="assemble_adapter">Step 4 : Installation of the Rubber Drain Hose Adaptor.\n
 Obtain the Rubber Drain Hose Adaptor and the two hose clamps from the Dishwasher Installation Kit. On one outside end of the Rubber Drain Hose Adapter is a raised rib. Insert the drain hose into the end
without the raised rib. Be sure to fully insert the drain hose. Secure the connection with the Silver Spring Clamp. Use the Gold Screw Clamp to attach the Rubber Drain Hose Adaptor to the house plumbing.
</string>

    <!-- Operate page text -->
    <string name="operate_arrange">Step 1 : Prepare the dishes and arrange them properly.\n
Scrape off any excess food from the dishes before placing them in the. If the food has hardened, you may need to let the dish soak first. Check to make sure the dishes are all dishwasher safe. Place glassware in glass rack. Put silverware in the silverware rack. Place pots, pans, and bake ware around the other dishes, but do not block the water sprayer.
</string>
    <string name="operate_detergent">Step 2 : Add detergent.\n
Place dish detergent designed for dishwasher use in the soap dispenser. Add rinse agent to prevent water spots if your dishwasher has that functionality.
</string>
    <string name="operate_mode">Step 3 : Select the mode and dishwasher cycle.\n
Close door. Choose wash cycle for your dishes. If you are washing mostly pots and pans, a heavy cycle will work best.
</string>
    <string name="operate_done">Step 4 : Start the dishwasher.</string>

</resources>