<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/operatelayout" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RepairActivity" >

    <TextView
        android:id="@+id/operateheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="How to operate the product?" />
    
     <Button
        android:id="@+id/readOperate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/operateheading"
        android:layout_toLeftOf="@+id/stopOperate"
        android:text="Read" />

    <Button
        android:id="@+id/stopOperate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/readOperate"
        android:layout_alignBottom="@+id/readOperate"
        android:layout_alignRight="@+id/scrollView1"
        android:text="Stop" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="50dp">
    

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/repairstep4"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/operatestep1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/operate_arrange" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrange" />

        <TextView
            android:id="@+id/operatestep2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/operate_detergent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/detergent" />
        
        <TextView
            android:id="@+id/operatestep3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/operate_mode" />
        
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mode" />
        
    	<TextView
            android:id="@+id/operatestep4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/operate_done" />
        
    </LinearLayout>

    </ScrollView>
</RelativeLayout>