<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/installlayout" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InstallActivity" >

    <TextView
        android:id="@+id/installheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="How to install the product?" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="50dp">
    
    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="2079dp"
        android:layout_alignBottom="@+id/installstep4"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/installstep1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/prepare" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/prepare" />

        <TextView
            android:id="@+id/installstep2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/connect" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/connect" />
        
        <TextView
            android:id="@+id/installstep3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/wires" />
        
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wires" />
        
         <TextView
        android:id="@+id/installstep4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
       android:layout_marginTop="44dp"
        android:text="@string/secure" />
         
         <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/secure" />

    
    </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/readInstall"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/installheading"
        android:layout_toLeftOf="@+id/stopInstall"
        android:text="Read" />

    <Button
        android:id="@+id/stopInstall"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/readInstall"
        android:layout_alignBottom="@+id/readInstall"
        android:layout_alignRight="@+id/scrollView1"
        android:text="Stop" />

</RelativeLayout>