<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/repairlayout" 
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RepairActivity" >

    <TextView
        android:id="@+id/repairheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:text="How to repair the product?" />
    
     <Button
        android:id="@+id/readRepair"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/repairheading"
        android:layout_toLeftOf="@+id/stopRepair"
        android:text="Read" />

    <Button
        android:id="@+id/stopRepair"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/readRepair"
        android:layout_alignBottom="@+id/readRepair"
        android:layout_alignRight="@+id/scrollView1"
        android:text="Stop" />
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="50dp">
    

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/repairstep4"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/repairstep1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/repair_notclean" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notclean" />

        <TextView
            android:id="@+id/repairstep2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/repair_leaks" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/leaks" />
        
        <TextView
            android:id="@+id/repairstep3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/repair_notstart" />
        
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notstart" />
        
    
    </LinearLayout>

    </ScrollView>
</RelativeLayout>